service.yaml
apiVersion: 0.1
kind: Service
metadata:
  labels:
    name: nginx
  name: nginx
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    name: nginx
